--- a/Fase 3/paginas/paginas.css
+++ b/Fase 3/paginas/paginas.css
@@ -14,6 +14,7 @@
     font-size: 15px;
     border-radius: 10px;
     margin-top: 10px;
+    margin-bottom: 25px;
 }
 
 .autor {
@@ -43,6 +44,7 @@ section {
     padding: 15px;
     margin-top: 20px;
 }
+
 h4 {
     text-align: center;
     font-size: 20px;
@@ -79,4 +81,70 @@ footer {
       height: 450px;
       border-radius: 30px;
       text-align: center;
+  }
+
+  .flex-container {
+    display: flex;
+    align-items: stretch;
+    background-color: #f1f1f1;
+  }
+
+  .flex-container > div {
+    color: white;
+    margin: 10px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(180, 180, 180);
+  }
+  
+  li {
+    float: left;
+    margin-right: 15px;
+  }
+  
+  li a, .dropbtn {
+    display: inline-block;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(196, 196, 196);
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(143, 134, 134, 0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: rgb(133, 133, 133);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #908e8e;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
